--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
     <modules>
         <module>core</module>
         <module>examples</module>
-    
+    	<module>spring-example</module>
   </modules>
 
 
@@ -120,7 +120,7 @@
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
-            <version>3.8.2</version>
+            <version>4.7</version>
             <scope>test</scope>
         </dependency>
 
@@ -145,6 +145,40 @@
             <artifactId>velocity</artifactId>
             <version>1.5</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jci-core</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jci-javac</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jci-eclipse</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+       
+
+         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jci-janino</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-jci-javac</artifactId>
+            <version>1.0</version>
+        </dependency>
+
+
     </dependencies>
 
     <build>
@@ -153,8 +187,9 @@
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
+                    
 				</configuration>
 			</plugin>
  		</plugins>    
