--- a/core/pom.xml
+++ b/core/pom.xml
@@ -30,13 +30,13 @@
             <artifactId>groovy-all</artifactId>
             <version>1.5.6</version>
         </dependency>
-          <dependency>
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.3</version>
             <scope>provided</scope>
         </dependency>
-                <dependency>
+        <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
             <version>1.2.8-SNAPSHOT</version>
@@ -48,7 +48,11 @@
             <version>1.2.8-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
-
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.8.0</version>
+        </dependency>
     </dependencies>
 
     <build>
