changed the packaging info in the pom.xmls
https://issues.apache.org/jira/browse/EXTSCRIPT-5

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@807654 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
     <parent>
-        <artifactId>myfaces-groovy</artifactId>
-        <groupId>org.apache.myfaces.extended</groupId>
+        <artifactId>root</artifactId>
+        <groupId>org.apache.myfaces.extension-scripting</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
-    <groupId>org.apache.myfaces.extended</groupId>
-    <artifactId>myfaces-groovy-examples</artifactId>
+    <groupId>org.apache.myfaces.extension-scripting</groupId>
+    <artifactId>examples</artifactId>
     <packaging>war</packaging>
     <name>A custom project using myfaces</name>
     <version>1.0-SNAPSHOT</version>
