--- a/core/pom.xml
+++ b/core/pom.xml
@@ -2,7 +2,7 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>myfaces-groovy-core</artifactId>
+    <artifactId>core</artifactId>
     <packaging>jar</packaging>
     <name>groovy core</name>
 
@@ -11,8 +11,8 @@
     </description>
 
     <parent>
-        <groupId>org.apache.myfaces.extended</groupId>
-        <artifactId>myfaces-groovy</artifactId>
+        <groupId>org.apache.myfaces.extension-scripting</groupId>
+        <artifactId>root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <repositories>
