--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -41,8 +41,8 @@
             <version>1.5.6</version>
         </dependency>
         <dependency>
-            <groupId>org.apache.myfaces.extended</groupId>
-            <artifactId>myfaces-groovy-core</artifactId>
+            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
