--- a/examples/src/main/webapp/WEB-INF/web.xml
+++ b/examples/src/main/webapp/WEB-INF/web.xml
@@ -18,10 +18,10 @@
  * specific language governing permissions and limitations
  * under the License.
 -->
-<web-app xmlns="http://java.sun.com/xml/ns/j2ee"
-         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
-         version="2.4">
+<web-app xmlns = "http://java.sun.com/xml/ns/j2ee"
+         xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
+         xsi:schemaLocation = "http://java.sun.com/xml/ns/j2ee http://java.sun.com/xml/ns/j2ee/web-app_2_4.xsd"
+         version = "2.4">
 
     <description>MyProject web.xml</description>
 
@@ -35,32 +35,34 @@
         <param-value>/WEB-INF/examples-config.xml</param-value>
     </context-param-->
 
-<!-- clean method working for myfaces 1.2.8+ -->
+    <!-- clean method working for myfaces 1.2.8+ -->
 
     <context-param>
-         <description>
-             Initializes the plugins for our groovy handlers
-         </description>
-         <param-name>org.apache.myfaces.FACES_INIT_PLUGINS</param-name>
-         <param-value>org.apache.myfaces.scripting.servlet.StartupServletContextPluginChainLoader</param-value>
-     </context-param>
-
+        <description>
+            Initializes the plugins for our groovy handlers
+        </description>
+        <param-name>org.apache.myfaces.FACES_INIT_PLUGINS</param-name>
+        <param-value>org.apache.myfaces.scripting.servlet.StartupServletContextPluginChainLoader</param-value>
+    </context-param>
 
     <context-param>
         <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
-        of the deployment dir</description>
+            of the deployment dir
+        </description>
         <param-name>org.apache.myfaces.scripting.groovy.LOADER_PATHS</param-name>
-        <param-value>/Users/werpu2/development/workspace/extensions-scripting/examples/src/main/webapp/WEB-INF/groovy</param-value>
+        <param-value>/Users/werpu2/development/workspace/extensions-scripting/examples/src/main/webapp/WEB-INF/groovy
+        </param-value>
     </context-param>
 
-     <context-param>
+    <context-param>
         <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
-        of the deployment dir</description>
+            of the deployment dir
+        </description>
         <param-name>org.apache.myfaces.scripting.java.LOADER_PATHS</param-name>
-        <param-value>/Users/werpu2/development/workspace/extensions-scripting/examples/src/main/webapp/WEB-INF/java</param-value>
+        <param-value>/Users/werpu2/development/workspace/extensions-scripting/examples/src/main/webapp/WEB-INF/java
+        </param-value>
     </context-param>
 
-    
     <context-param>
         <description>State saving method: "client" or "server" (= default)
             See JSF Specification 2.5.3
@@ -70,10 +72,9 @@
     </context-param>
 
     <context-param>
-		<param-name>facelets.LIBRARIES</param-name>
-		<param-value>/WEB-INF/tomahawk.taglib.xml;/WEB-INF/groovy-taglib.xml</param-value>
-	</context-param>
-    
+        <param-name>facelets.LIBRARIES</param-name>
+        <param-value>/WEB-INF/tomahawk.taglib.xml;/WEB-INF/groovy-taglib.xml</param-value>
+    </context-param>
 
     <context-param>
         <description>Only applicable if state saving method is "server" (= default).
@@ -208,7 +209,6 @@
         <param-value>true</param-value>
     </context-param>
 
-
     <!-- Extensions Filter -->
     <filter>
         <filter-name>extensionsFilter</filter-name>
@@ -265,7 +265,6 @@
             <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
         </listener>
     -->
- 
 
     <!-- Faces Servlet -->
     <servlet>
