--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -40,9 +40,15 @@
             <artifactId>groovy-all</artifactId>
             <version>1.5.6</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <artifactId>core-java6</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -62,6 +68,7 @@
             <artifactId>portlet-api</artifactId>
             <version>1.0</version>
         </dependency>
+      
 
         <dependency>
             <groupId>com.sun.facelets</groupId>
