http://issues.apache.org/jira/browse/EXTSCRIPT-12 project reorg
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@813355 13f79535-47bb-0310-9956-ffa450edef68

--- a/engine/core/pom.xml
+++ b/engine/core/pom.xml
@@ -41,13 +41,14 @@
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
             <version>1.2.8-SNAPSHOT</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
+        
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
             <version>1.2.8-SNAPSHOT</version>
-            <scope>provided</scope>
+            <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
@@ -103,4 +104,5 @@
         </plugins>
     </build>
 
+    
 </project>
