--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -12,7 +12,7 @@
 
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
-        <artifactId>root</artifactId>
+        <artifactId>core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <repositories>
@@ -41,14 +41,14 @@
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
             <version>1.2.8-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
             <version>1.2.8-SNAPSHOT</version>
-            <scope>compile</scope>
+            <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
