--- a/core/myfaces12-extensions/pom.xml
+++ b/core/myfaces12-extensions/pom.xml
@@ -2,12 +2,12 @@
          xmlns:xsi = "http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation = "http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <artifactId>core-java6</artifactId>
+    <artifactId>myfaces12-extensions</artifactId>
     <packaging>jar</packaging>
-    <name>core java6 part</name>
+    <name>myfaces12-extensions</name>
 
     <description>
-        myfaces extension core java6 lib
+        extension-scripting classes which enable myfaces 1.2 compatibility
     </description>
 
     <parent>
@@ -15,27 +15,15 @@
         <artifactId>core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
-    <repositories>
-        <repository>
-            <id>maven2-repository.dev.java.net</id>
-            <name>Java.net Repository for Maven</name>
-            <url>http://download.java.net/maven/2/</url>
-            <layout>default</layout>
-        </repository>
-    </repositories>
 
     <dependencies>
         <dependency>
-            <groupId>org.apache.myfaces.extension-scripting</groupId>
-            <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <groupId>javax.servlet</groupId>
+            <artifactId>servlet-api</artifactId>
+            <version>2.3</version>
+            <scope>provided</scope>
         </dependency>
         <dependency>
-            <groupId>commons-beanutils</groupId>
-            <artifactId>commons-beanutils</artifactId>
-            <version>1.8.0</version>
-        </dependency>
-         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
             <version>1.2.8-SNAPSHOT</version>
@@ -47,19 +35,11 @@
             <version>1.2.8-SNAPSHOT</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-beanutils</groupId>
+            <artifactId>commons-beanutils</artifactId>
+            <version>1.8.0</version>
+        </dependency>
     </dependencies>
-
-
-    <build>
-        <plugins>
-            <plugin>
-                <artifactId>maven-compiler-plugin</artifactId>
-                <configuration>
-                    <source>1.6</source>
-                    <target>1.6</target>
-                </configuration>
-            </plugin>
-        </plugins>
-    </build>
 
 </project>
