--- a/core/myfaces2-extension/pom.xml
+++ b/core/myfaces2-extension/pom.xml
@@ -12,7 +12,7 @@
 
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
-        <artifactId>root</artifactId>
+        <artifactId>core-root</artifactId>
         <version>1.0-SNAPSHOT</version>
     </parent>
 
