--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -50,6 +50,13 @@
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
+        
+        <dependency>
+            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <artifactId>myfaces12-extensions</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core-java6</artifactId>
