--- a/core/myfaces2-extensions/pom.xml
+++ b/core/myfaces2-extensions/pom.xml
@@ -18,6 +18,13 @@
 
     <dependencies>
         <dependency>
+               <groupId>org.apache.myfaces.extension-scripting</groupId>
+               <artifactId>core</artifactId>
+               <version>1.0-SNAPSHOT</version>
+           </dependency>
+                        
+
+        <dependency>
             <groupId>javax.servlet</groupId>
             <artifactId>servlet-api</artifactId>
             <version>2.3</version>
