--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -29,7 +29,7 @@
         <dependency>
             <groupId>org.codehaus.groovy</groupId>
             <artifactId>groovy-all</artifactId>
-            <version>1.5.6</version>
+            <version>1.6.4</version>
         </dependency>
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -56,11 +56,15 @@
             <version>1.8.0</version>
         </dependency>
 
+       
+
         <dependency>
-            <groupId>org.apache.bcel</groupId>
-            <artifactId>bcel</artifactId>
-            <version>5.2</version>
+            <groupId>asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>3.2</version>
         </dependency>
+       
+        
 
         <dependency>
             <groupId>org.apache.commons</groupId>
