--- a/core/myfaces2-extensions/pom.xml
+++ b/core/myfaces2-extensions/pom.xml
@@ -18,11 +18,10 @@
 
     <dependencies>
         <dependency>
-               <groupId>org.apache.myfaces.extension-scripting</groupId>
-               <artifactId>core</artifactId>
-               <version>1.0-SNAPSHOT</version>
-           </dependency>
-                        
+            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
 
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -46,6 +45,12 @@
             <groupId>commons-beanutils</groupId>
             <artifactId>commons-beanutils</artifactId>
             <version>1.8.0</version>
+        </dependency>
+
+        <dependency>
+            <groupId>qdox</groupId>
+            <artifactId>qdox</artifactId>
+            <version>1.6.1</version>
         </dependency>
     </dependencies>
 
