--- a/examples/myfaces12-example/pom.xml
+++ b/examples/myfaces12-example/pom.xml
@@ -1,18 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project>
     <parent>
-        <artifactId>root</artifactId>
+        <artifactId>examples</artifactId>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <version>1.0-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.extension-scripting</groupId>
-    <artifactId>spring-examples</artifactId>
+    <artifactId>myfaces12-example</artifactId>
     <packaging>war</packaging>
     <name>A custom project using myfaces</name>
     <version>1.0-SNAPSHOT</version>
     <url>http://www.apache.org</url>
 
+
+    
 
     <build>
         <plugins>
@@ -28,7 +30,9 @@
                         </connector>
                     </connectors>
                     <scanIntervalSeconds>1</scanIntervalSeconds>
+                    
                 </configuration>
+
             </plugin>
 
         </plugins>
@@ -40,9 +44,22 @@
             <artifactId>groovy-all</artifactId>
             <version>1.5.6</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+        
+        <dependency>
+            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <artifactId>myfaces12-extensions</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <artifactId>core-java6</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
@@ -62,6 +79,7 @@
             <artifactId>portlet-api</artifactId>
             <version>1.0</version>
         </dependency>
+      
 
         <dependency>
             <groupId>com.sun.facelets</groupId>
@@ -93,11 +111,6 @@
             <artifactId>junit</artifactId>
             <version>4.0</version>
             <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring</artifactId>
-            <version>2.5.6</version>
         </dependency>
     </dependencies>
 </project>
