https://issues.apache.org/jira/browse/EXTSCRIPT-1
enabling jsf2 example syncing vital parts

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@815322 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/pom.xml
+++ b/examples/pom.xml
@@ -19,6 +19,7 @@
 
    <modules>
      <module>myfaces12-example</module>
+	<module>myfaces20-example</module>
 	 <module>spring-example</module>
    </modules>
 
