--- a/examples/myfaces20-example/pom.xml
+++ b/examples/myfaces20-example/pom.xml
@@ -13,31 +13,38 @@
     <version>1.0-SNAPSHOT</version>
     <url>http://www.apache.org</url>
 
-
-    
     <repositories>
         <repository>
             <id>maven2-repository.dev.java.net</id>
             <url>http://download.java.net/maven/2</url>
         </repository>
-     
+
     </repositories>
 
     <build>
         <plugins>
+
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+
             <plugin>
                 <groupId>org.mortbay.jetty</groupId>
                 <artifactId>maven-jetty-plugin</artifactId>
                 <version>6.1.1</version>
                 <configuration>
                     <connectors>
-                        <connector implementation="org.mortbay.jetty.nio.SelectChannelConnector">
+                        <connector implementation = "org.mortbay.jetty.nio.SelectChannelConnector">
                             <port>9090</port>
                             <maxIdleTime>60000</maxIdleTime>
                         </connector>
                     </connectors>
                     <scanIntervalSeconds>1</scanIntervalSeconds>
-                    
+
                 </configuration>
 
             </plugin>
@@ -52,13 +59,12 @@
             <version>1.5.6</version>
         </dependency>
 
-
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-        
+
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>myfaces2-extensions</artifactId>
@@ -70,8 +76,7 @@
             <artifactId>core-java6</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
-	
-	
+
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
@@ -84,14 +89,12 @@
             <version>2.0.0-SNAPSHOT</version>
             <scope>compile</scope>
         </dependency>
-         <dependency>
+        <dependency>
             <groupId>javax.portlet</groupId>
             <artifactId>portlet-api</artifactId>
             <version>1.0</version>
         </dependency>
-      
 
-       
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
