--- a/core/core-java6/pom.xml
+++ b/core/core-java6/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>core-java6</artifactId>
     <packaging>jar</packaging>
     <name>core java6 part</name>
+    <version>1.0-SNAPSHOT</version>
 
     <description>
         myfaces extension core java6 lib
