compile all now working compiler api now under unit test coverage
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@888634 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -6,6 +6,7 @@
     <packaging>jar</packaging>
     <name>groovy core</name>
 
+    
     <description>
         groovy myfaces core lib
     </description>
@@ -69,6 +70,15 @@
 
     <build>
         <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <configuration>
+                    <source>1.5</source>
+                    <target>1.5</target>
+                    
+                </configuration>
+             </plugin>
             <plugin>
                 <groupId>org.codehaus.mojo.groovy</groupId>
                 <artifactId>groovy-maven-plugin</artifactId>
