--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -41,14 +41,14 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>1.2.9-SNAPSHOT</version>
+            <version>1.2.8</version>
             <scope>provided</scope>
         </dependency>
         
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>1.2.9-SNAPSHOT</version>
+            <version>1.2.8</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
