--- a/examples/myfaces12-example/pom.xml
+++ b/examples/myfaces12-example/pom.xml
@@ -71,13 +71,13 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>1.2.9-SNAPSHOT</version>
+            <version>1.2.8</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>1.2.9-SNAPSHOT</version>
+            <version>1.2.8</version>
             <scope>compile</scope>
         </dependency>
          <dependency>
