--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -57,6 +57,13 @@
             <version>1.8.0</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.3</version>
+            <scope>test</scope>
+        </dependency>
        
 
         <dependency>
