--- a/examples/spring-example/pom.xml
+++ b/examples/spring-example/pom.xml
@@ -9,7 +9,7 @@
     <groupId>org.apache.myfaces.extension-scripting</groupId>
     <artifactId>spring-example</artifactId>
     <packaging>war</packaging>
-    <name>A custom project using myfaces</name>
+    <name>A custom project using myfaces and spring</name>
     <version>1.0-SNAPSHOT</version>
     <url>http://www.apache.org</url>
 
@@ -40,21 +40,35 @@
             <artifactId>groovy-all</artifactId>
             <version>1.5.6</version>
         </dependency>
+
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core</artifactId>
             <version>1.0-SNAPSHOT</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <artifactId>core-java6</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+
+        <dependency>
+            <groupId>org.apache.myfaces.extension-scripting</groupId>
+            <artifactId>myfaces12-extensions</artifactId>
+            <version>1.0-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>1.2.8-SNAPSHOT</version>
+            <version>1.2.8</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>1.2.8-SNAPSHOT</version>
+            <version>1.2.8</version>
             <scope>compile</scope>
         </dependency>
          <dependency>
