--- a/examples/myfaces12-example/src/main/webapp/WEB-INF/web.xml
+++ b/examples/myfaces12-example/src/main/webapp/WEB-INF/web.xml
@@ -52,8 +52,7 @@
             of the deployment dir
         </description>
         <param-name>org.apache.myfaces.scripting.groovy.LOADER_PATHS</param-name>
-        <param-value>/Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces12-example/src/main/webapp/WEB-INF/groovy
-        </param-value>
+        <param-value>D:/dev/work/ideaprojects/threads/extscript/examples/myfaces12-example/src/main/webapp/WEB-INF/groovy</param-value>
     </context-param>
 
 
@@ -62,8 +61,7 @@
             of the deployment dir
         </description>
         <param-name>org.apache.myfaces.scripting.java.LOADER_PATHS</param-name>
-        <param-value>/Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces12-example/src/main/webapp/WEB-INF/java
-        </param-value>
+        <param-value>D:/dev/work/ideaprojects/threads/extscript/examples/myfaces12-example/src/main/webapp/WEB-INF/java</param-value>
     </context-param>
     
 
@@ -243,11 +241,11 @@
     </filter>
 
     <filter>
-        <filter-name>scritpingFilter</filter-name>
+        <filter-name>scriptingFilter</filter-name>
         <filter-class>org.apache.myfaces.scripting.servlet.ScriptingServletFilter</filter-class>
     </filter>
     <filter-mapping>
-        <filter-name>scritpingFilter</filter-name>
+        <filter-name>scriptingFilter</filter-name>
         <url-pattern>/*</url-pattern>
         <dispatcher>REQUEST</dispatcher>
         <dispatcher>FORWARD</dispatcher>
@@ -265,10 +263,9 @@
     </filter-mapping>
 
     <!-- Listener, to allow Jetty serving MyFaces apps -->
-    <!--    <listener>
-            <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
-        </listener>
-    -->
+    <listener>
+        <listener-class>org.apache.myfaces.webapp.StartupServletContextListener</listener-class>
+    </listener>
 
     <!-- Faces Servlet -->
     <servlet>
