--- a/examples/myfaces12-example/src/main/webapp/WEB-INF/web.xml
+++ b/examples/myfaces12-example/src/main/webapp/WEB-INF/web.xml
@@ -45,8 +45,28 @@
         <param-value>org.apache.myfaces.scripting.servlet.StartupServletContextPluginChainLoader</param-value>
     </context-param>
 
+    <!--
+    <context-param>
+        <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
+            of the deployment dir
+        </description>
+        <param-name>org.apache.myfaces.scripting.groovy.LOADER_PATHS</param-name>
+        <param-value>
+            /Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces12-example/src/main/webapp/WEB-INF/groovy
+        </param-value>
+    </context-param>
 
-
+    <context-param>
+        <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
+            of the deployment dir
+        </description>
+        <param-name>org.apache.myfaces.scripting.java.LOADER_PATHS</param-name>
+        <param-value>
+            /Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces12-example/src/main/webapp/WEB-INF/java
+        </param-value>
+    </context-param>
+    -->
+    <!--
     <context-param>
         <description>Additional comma separated loader paths to allow direct editing on the sources directory instead
             of the deployment dir
@@ -63,7 +83,7 @@
         <param-name>org.apache.myfaces.scripting.java.LOADER_PATHS</param-name>
         <param-value>D:/dev/work/ideaprojects/threads/extscript/examples/myfaces12-example/src/main/webapp/WEB-INF/java</param-value>
     </context-param>
-    
+    -->
 
     <context-param>
         <description>State saving method: "client" or "server" (= default)
