--- a/core/myfaces12-extensions/pom.xml
+++ b/core/myfaces12-extensions/pom.xml
@@ -48,6 +48,13 @@
             <artifactId>commons-beanutils</artifactId>
             <version>1.8.0</version>
         </dependency>
+
+         <dependency>
+            <groupId>commons-el</groupId>
+            <artifactId>commons-el</artifactId>
+            <version>1.0</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 </project>
