--- a/examples/myfaces20-example/pom.xml
+++ b/examples/myfaces20-example/pom.xml
@@ -79,6 +79,17 @@
             <artifactId>portlet-api</artifactId>
             <version>1.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>org.apache.myfaces.tomahawk</groupId>
+            <artifactId>tomahawk</artifactId>
+            <version>1.1.6</version>
+            <scope>compile</scope>
+            <exclusions>
+                <exclusion>
+                    <artifactId>jstl</artifactId>
+                    <groupId>javax.servlet</groupId>
+                </exclusion>
+            </exclusions>
+        </dependency>
     </dependencies>
 </project>
