https://issues.apache.org/jira/browse/EXTSCRIPT-39
works on the depenency scanning..., the core has been implemented but not the connection to the tainting yet!

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@892520 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -51,6 +51,13 @@
             <version>1.8.0</version>
         </dependency>
 
+        <!-- asm dependency readded for class scanning -->
+        <dependency>
+            <groupId>asm</groupId>
+            <artifactId>asm</artifactId>
+            <version>3.2</version>
+            
+        </dependency>
 
         <dependency>
             <groupId>junit</groupId>
