finishing the implementations of the source redirecting resource handlers for ext-scripting removal of many typos
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@897484 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
+++ b/examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
@@ -72,7 +72,26 @@
         <param-name>org.apache.myfaces.scripting.java.LOADER_PATHS</param-name>
         <param-value>D:/dev/work/ideaprojects/threads/extscript/examples/myfaces20-example/src/main/webapp/WEB-INF/java</param-value>
     </context-param>
+
+
+    <context-param>
+        <description>additional comma separated resource pickup paths</description>
+        <param-name>org.apache.myfaces.scripting.resources.LOADER_PATHS</param-name>
+        <param-value>D:/dev/work/ideaprojects/threads/extscript/examples/myfaces20-example/src/main/webapp/WEB-INF/java</param-value>
+    </context-param>
     -->
+
+    <context-param>
+        <description>resource paths for our custom facelet resource resolver</description>
+        <param-name>org.apache.myfaces.scripting.resources.LOADER_PATHS</param-name>
+        <param-value>/Users/werpu2/development/workspace/extensions-scripting3/examples/myfaces20-example/src/main/webapp</param-value>
+    </context-param>
+
+    <context-param>
+        <description>a redirecting Facelet resource resolver which allows to pick up templates and resources from our source dir</description>
+        <param-name>facelets.RESOURCE_RESOLVER</param-name>
+        <param-value>org.apache.myfaces.scripting.facelet.ReroutingResourceResolver</param-value>
+    </context-param>
 
     <context-param>
         <description>State saving method: "client" or "server" (= default)
