https://issues.apache.org/jira/browse/EXTSCRIPT-61 fix the parent pom issue, also remove a utf problem heaven knows why this one came into the source
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@906677 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -12,6 +12,12 @@
         This project provides the myfaces groovy bindings
     </description>
 
+    <parent>
+        <groupId>org.apache.myfaces</groupId>
+        <artifactId>myfaces</artifactId>
+        <version>7</version>
+    </parent>
+
     <modules>
         <module>core</module>
         <module>examples</module>
