--- a/examples/myfaces20-example/pom.xml
+++ b/examples/myfaces20-example/pom.xml
@@ -65,13 +65,13 @@
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-api</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-beta</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.core</groupId>
             <artifactId>myfaces-impl</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.0.0-beta</version>
             <scope>compile</scope>
         </dependency>
         <dependency>
