changing version number to alpha 1 manually due to having the release plugin wanting a gpg key
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/branches/1.0_alpha1_prepare@910491 13f79535-47bb-0310-9956-ffa450edef68

--- a/core/core-java6/pom.xml
+++ b/core/core-java6/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>core-java6</artifactId>
     <packaging>jar</packaging>
     <name>core java6 part</name>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-ALPHA-1</version>
 
     <description>
         myfaces extension core java6 lib
@@ -15,7 +15,7 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>core-root</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-ALPHA-1</version>
     </parent>
     <repositories>
         <repository>
@@ -30,7 +30,7 @@
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-ALPHA-1</version>
         </dependency>
         <dependency>
             <groupId>commons-beanutils</groupId>
