--- a/core/core/pom.xml
+++ b/core/core/pom.xml
@@ -5,6 +5,7 @@
     <artifactId>core</artifactId>
     <packaging>jar</packaging>
     <name>groovy core</name>
+    <version>1.0-ALPHA-1</version>
 
     <description>
         groovy myfaces core lib
@@ -13,7 +14,7 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>core-root</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-ALPHA-1</version>
     </parent>
     <repositories>
         <repository>
