--- a/core/myfaces12-extensions/pom.xml
+++ b/core/myfaces12-extensions/pom.xml
@@ -13,7 +13,7 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>core-root</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-ALPHA-1</version>
     </parent>
 
     <dependencies>
@@ -22,7 +22,7 @@
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-ALPHA-1</version>
         </dependency>
 
 
