--- a/core/myfaces2-extensions/pom.xml
+++ b/core/myfaces2-extensions/pom.xml
@@ -13,14 +13,14 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>core-root</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-ALPHA-1</version>
     </parent>
 
     <dependencies>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-ALPHA-1</version>
         </dependency>
 
         <dependency>
