--- a/core/pom.xml
+++ b/core/pom.xml
@@ -5,7 +5,7 @@
     <artifactId>core-root</artifactId>
     <packaging>pom</packaging>
     <name>groovy core engine</name>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-ALPHA-1</version>
 
     <description>
         groovy myfaces core engine meta project
@@ -14,7 +14,7 @@
     <parent>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
         <artifactId>root</artifactId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-ALPHA-1</version>
     </parent>
 
     <modules>
