--- a/examples/myfaces20-example/pom.xml
+++ b/examples/myfaces20-example/pom.xml
@@ -4,14 +4,14 @@
     <parent>
         <artifactId>examples</artifactId>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-ALPHA-1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.extension-scripting</groupId>
     <artifactId>myfaces20-example</artifactId>
     <packaging>war</packaging>
     <name>A custom project using myfaces 2.0</name>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-ALPHA-1</version>
     <url>http://www.apache.org</url>
 
     <repositories>
@@ -47,19 +47,19 @@
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-ALPHA-1</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>myfaces2-extensions</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-ALPHA-1</version>
         </dependency>
 
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core-java6</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-ALPHA-1</version>
         </dependency>
 
         <dependency>
