--- a/examples/spring-example/pom.xml
+++ b/examples/spring-example/pom.xml
@@ -3,14 +3,14 @@
     <parent>
         <artifactId>examples</artifactId>
         <groupId>org.apache.myfaces.extension-scripting</groupId>
-        <version>1.0-SNAPSHOT</version>
+        <version>1.0-ALPHA-1</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.apache.myfaces.extension-scripting</groupId>
     <artifactId>spring-example</artifactId>
     <packaging>war</packaging>
     <name>A custom project using myfaces and spring</name>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-ALPHA-1</version>
     <url>http://www.apache.org</url>
    
 
@@ -24,19 +24,19 @@
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-ALPHA-1</version>
         </dependency>
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>core-java6</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-ALPHA-1</version>
         </dependency>
 
 
         <dependency>
             <groupId>org.apache.myfaces.extension-scripting</groupId>
             <artifactId>myfaces12-extensions</artifactId>
-            <version>1.0-SNAPSHOT</version>
+            <version>1.0-ALPHA-1</version>
         </dependency>
 
         <dependency>
