--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <artifactId>root</artifactId>
     <packaging>pom</packaging>
     <name>Myfaces groovy binding project</name>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0-ALPHA-1</version>
 
     <description>
         This project provides the myfaces groovy bindings
