https://issues.apache.org/jira/browse/EXTSCRIPT-68 https://issues.apache.org/jira/browse/EXTSCRIPT-69
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@911860 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
+++ b/examples/myfaces20-example/src/main/webapp/WEB-INF/web.xml
@@ -116,7 +116,7 @@
     </context-param>
     <context-param>
         <param-name>javax.faces.FACELETS_LIBRARIES</param-name>
-        <param-value>/WEB-INF/facelets/groovy-taglib.xml;/WEB-INF/facelets/extscripting.taglib.xml</param-value>
+        <param-value>/WEB-INF/facelets/groovy-taglib.xml;/WEB-INF/facelets/extscripting.taglib.xml;/WEB-INF/facelets/tomahawk.taglib.xml</param-value>
     </context-param>
 
 
