https://issues.apache.org/jira/browse/EXTSCRIPT-88
git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@920729 13f79535-47bb-0310-9956-ffa450edef68

--- a/examples/myfaces12-example/src/main/webapp/WEB-INF/web.xml
+++ b/examples/myfaces12-example/src/main/webapp/WEB-INF/web.xml
@@ -100,7 +100,7 @@
         <param-value>D:/dev/work/ideaprojects/threads/extscript/examples/myfaces12-example/src/main/webapp/WEB-INF/java</param-value>
     </context-param>
     -->
-
+    
     <context-param>
         <description>State saving method: "client" or "server" (= default)
             See JSF Specification 2.5.3
@@ -111,7 +111,7 @@
 
     <context-param>
         <param-name>facelets.LIBRARIES</param-name>
-        <param-value>/WEB-INF/facelets/groovy-taglib.xml;/WEB-INF/facelets/extscripting.taglib.xml</param-value>
+        <param-value>/WEB-INF/facelets/groovy-taglib.xml</param-value>
     </context-param>
 
     <context-param>
