https://issues.apache.org/jira/browse/EXTSCRIPT-90
introducing meta bundles to reduce setup complexity for the end user!

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@920900 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -21,6 +21,7 @@
 
     <modules>
         <module>core</module>
+        <module>bundles</module>
         <module>examples</module>
     </modules>
 
