https://issues.apache.org/jira/browse/EXTSCRIPT-41
ongoing work on the users guide

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@921847 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -10,7 +10,8 @@
 
 
     <description>
-        This project provides the myfaces groovy bindings
+        MyFaces Extension Scripting, scripting support and dynamic recompilation
+        for JSF
     </description>
 
     <parent>
