https://issues.apache.org/jira/browse/EXTSCRIPT-41
adding download apts due to broken links if I generate it from xdoc
taking the original trinidad page mostly
still not done yet
but tomorrow the docs will be done for a first release

git-svn-id: https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk@922220 13f79535-47bb-0310-9956-ffa450edef68

--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,12 @@
         <module>examples</module>
     </modules>
 
+    <scm>
+        <connection>scm:svn:http://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/</connection>
+        <developerConnection>scm:svn:https://svn.apache.org/repos/asf/myfaces/extensions/scripting/trunk/</developerConnection>
+        <url>http://svn.apache.org/viewvc/myfaces/extensions/scripting/trunk/</url>
+    </scm>
+
     <repositories>
         <repository>
             <id>maven2-repository.dev.java.net</id>
@@ -54,9 +60,7 @@
     </repositories>
 
     <dependencies>
-
         <!-- compile -->
-
         <dependency>
             <groupId>javax.el</groupId>
             <artifactId>el-api</artifactId>
